fix broken layout when there are no suggestions in embed-suggestions tageditor

--- a/assets/app/elements/ngTagEditor/ngTagEditor.scss
+++ b/assets/app/elements/ngTagEditor/ngTagEditor.scss
@@ -62,6 +62,7 @@
         }
     }
     .tag-suggestions {
+        min-height: 45px;
         margin-top: -3px;
         padding-top: 3px;
         padding-right: 10px;
